<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2016, 2017 Alexander Shulgin

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Siesto</string>
    <string name="screen_monitor_service_name" translatable="false">Screen Monitor Service</string>
    <string name="export_import_service_name">Export/Import Service</string>
    <string name="copy_to_pc_service_name">Copy to PC Service</string>
    <string name="core_service_name">Core Service</string>

    <!-- predefined entry fields -->
    <string name="enum_NAME">Name</string>
    <string name="enum_URL">URL</string>
    <string name="enum_USER">User</string>
    <string name="enum_PASSWORD">Password</string>
    <string name="enum_val_URL">http://</string>

    <string name="exception_no_storage_permission">No storage permission granted</string>
    <string name="exception_no_file_found">File not found %1$s</string>
    <string name="exception_invalid_input_file">Invalid input file %1$s</string>

    <string name="internal_exception_must_implement" translatable="false">%1$s must implement %2$s.</string>

    <string name="title_secret_fields">Fields</string>
    <string name="title_secret_field">Field</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_generate_password">Generate Password</string>
    <string name="title_master_pin" translatable="false">@string/label_master_pin</string>
    <string name="title_export" translatable="false">@string/label_export</string>
    <string name="title_import" translatable="false">@string/label_import</string>

    <string name="label_version">Version: %1$s.%2$s</string>
    <string name="label_attribute_key">Field name</string>
    <string name="label_attribute_value">Field value</string>
    <string name="label_encrypted">Encrypted</string>
    <string name="label_search">Search</string>
    <string name="label_loading_ellipsis" tools:keep="@string/label_loading_ellipsis">Loading&#8230;</string>
    <string name="label_delete_entry">Delete Record</string>
    <string name="label_delete_field">Delete Field</string>
    <string name="label_delete_paired_device">Delete Paired Device</string>
    <string name="label_delete">Delete</string>
    <string name="label_copy">Copy</string>
    <string name="label_copy_to_pc">Copy to %1$s</string>
    <plurals name="label_number_of_lowercase_chars">
        <item quantity="one">%1$d Lowercase Character</item>
        <item quantity="other">%1$d Lowercase Characters</item>
    </plurals>
    <plurals name="label_number_of_uppercase_chars">
        <item quantity="one">%1$d Uppercase Character</item>
        <item quantity="other">%1$d Uppercase Characters</item>
    </plurals>
    <plurals name="label_number_of_numeric_chars">
        <item quantity="one">%1$d Numeric Character</item>
        <item quantity="other">%1$d Numeric Characters</item>
    </plurals>
    <plurals name="label_number_of_special_chars">
        <item quantity="one">%1$d Special Character</item>
        <item quantity="other">%1$d Special Characters</item>
    </plurals>
    <string name="label_open_drawer">Open Drawer</string>
    <string name="label_close_drawer">Close Drawer</string>
    <string name="label_options">Options</string>
    <string name="label_export">Export</string>
    <string name="label_import">Import</string>
    <string name="label_settings">Settings</string>
    <string name="label_get_pc_receiver">Get PC Receiver</string>
    <string name="label_export_engine">Export Engine</string>
    <string name="label_import_engine">Import Engine</string>
    <string name="label_password">Password</string>
    <string name="label_password_repeat">Password Repeat</string>
    <string name="label_show_password">Show Password</string>
    <string name="label_select_destination">Choose Destination</string>
    <string name="label_select_source">Choose Source File</string>
    <string name="label_select_directory">Choose Directory</string>
    <string name="label_select_file">Choose File</string>
    <string name="label_back">Back</string>
    <string name="label_error">Error</string>
    <string name="label_ellipsis" translatable="false">&#8230;</string>
    <string name="label_hidden_password" translatable="false">********</string>
    <string name="label_conflict_resolution">Conflict Resolution</string>
    <string name="label_overwrite">Overwrite</string>
    <string name="label_merge">Merge</string>
    <string name="label_file">File</string>
    <string name="label_directory">Directory</string>
    <string name="label_logo">Logo</string>
    <string name="label_master_pin">Master Pin</string>
    <string name="label_enter_pin">Enter Pin</string>
    <string name="label_enter_new_pin">Enter New Pin</string>
    <string name="label_repeat_new_pin">Repeat New Pin</string>
    <string name="label_request_permissions">Request Permissions</string>
    <string name="label_protected_field_visible">Expose Protected</string>
    <string name="label_pc_receivers">Paired Devices</string>
    <string name="label_clear">Clear</string>
    <string name="label_navigate">Navigate</string>
    <string name="label_copied">Copied</string>

    <string-array name="spinner_conflict_resolution">
        <item>@string/label_overwrite</item>
        <item>@string/label_merge</item>
    </string-array>

    <string name="url_pc_receiver" translatable="false">https://github.com/alexs20/SSSPCReceiver/releases</string>

    <string name="message_no_destination_directory_selected">Destination directory not selected.</string>
    <string name="message_no_source_file_selected">Source file not selected.</string>
    <string name="message_password_not_the_same">Repeated password is not the same.</string>
    <string name="message_no_password">No password defined.</string>
    <string name="message_import_process_completed">All data has been successfully imported.</string>
    <string name="message_export_process_completed">All data has been successfully exported.</string>
    <string name="message_import_process_failed">Error processing input file.</string>
    <string name="message_export_process_failed">Error processing output file.</string>
    <string name="message_master_pin_validation">Activate master pin validation on application start.</string>
    <string name="message_repeated_pin_no_the_same">Repeated pin is not the same.</string>
    <string name="message_protected_fields_visible_by_default">Protected fields are visible by the default.</string>
    <string name="message_permissions_required">This functionality requires additional permissions to be granted.</string>
    <string name="message_entry_confirmation">You are going to delete the swiped Record. This action cannot be undone. Are you sure?</string>
    <string name="message_attribute_confirmation">You are going to delete the swiped Field. This action cannot be undone. Are you sure?</string>
    <string name="message_delete_paired_device_confirmation">You are going to delete the Paired Device. This action cannot be undone. Are you sure?</string>
    <string name="message_pc_receivers">List of devices you can copy data to.</string>
    <string name="message_scan_receiver_code">Open PC Receiver\'s QR code and scan it.</string>
    <string name="message_invalid_qr_code">Invalid QR Code.</string>
    <string name="message_invalid_receiver">Incompatible Receiver Version.</string>

    <string name="label_privacy_policy">Privacy Policy</string>
    <string name="message_privacy_policy">Sensitive permissions usage</string>
    <string name="url_privacy_policy">https://github.com/alexs20/SimpleSecretStorage/blob/master/privacy_policy.md</string>


</resources>
