<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2016 Alexander Shulgin

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/mainTable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:paddingLeft="3dip"
        android:paddingRight="3dip"
        android:shrinkColumns="1"
        android:stretchColumns="*">


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_import_engine"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/sprExtEngine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_conflict_resolution"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/sprConflictResolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/spinner_conflict_resolution" />
        </TableRow>

        <TableRow android:id="@+id/trPassword">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1" />


        </TableRow>


        <TableRow android:id="@+id/trPasswordOpen">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edtPasswordOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textVisiblePassword"
                android:maxLines="1" />


        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSourcePath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.9"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/label_select_source"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorPrimary" />

                <Button
                    android:id="@+id/btnSelectDest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:drawablePadding="0dp"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:text="@string/label_ellipsis" />
            </LinearLayout>


        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:id="@+id/layWait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false" />

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@mipmap/img24dp_ok"
        app:fabSize="normal" />


</RelativeLayout>