<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2016, 2017 Alexander Shulgin

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/fragment_padding"
        android:paddingEnd="@dimen/fragment_padding"
        android:paddingStart="@dimen/fragment_padding"
        android:paddingTop="@dimen/fragment_padding">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextInputHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_attribute_key"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="Deprecated" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextInputHint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_attribute_value"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="Deprecated">

                <requestFocus />
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblProtected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="10dp"
                android:paddingStart="2dp"
                android:text="@string/label_encrypted"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/chkProtected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="0dp"
            android:src="@mipmap/img24dp_key"
            app:fabSize="normal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@mipmap/img24dp_ok"
            app:fabSize="normal" />
    </LinearLayout>
</RelativeLayout>