<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2016, 2017 Alexander Shulgin

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/fragment_padding"
            android:paddingEnd="@dimen/fragment_padding"
            android:paddingStart="@dimen/fragment_padding"
            android:paddingTop="@dimen/fragment_padding">

            <TextView
                android:id="@+id/txtPwdPreview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:paddingBottom="@dimen/horizontal_spacing"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:textIsSelectable="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/horizontal_spacing"
                android:paddingEnd="@dimen/fragment_padding"
                android:paddingStart="@dimen/fragment_padding"
                android:paddingTop="@dimen/fragment_padding">

                <TextView
                    android:id="@+id/txtLcChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_number_of_lowercase_chars"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/seekLcChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/horizontal_spacing"
                android:paddingEnd="@dimen/fragment_padding"
                android:paddingStart="@dimen/fragment_padding"
                android:paddingTop="@dimen/fragment_padding">

                <TextView
                    android:id="@+id/txtUpChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_number_of_uppercase_chars"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/seekUpChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/horizontal_spacing"
                android:paddingEnd="@dimen/fragment_padding"
                android:paddingStart="@dimen/fragment_padding"
                android:paddingTop="@dimen/fragment_padding">

                <TextView
                    android:id="@+id/txtNumChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_number_of_numeric_chars"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/seekNumChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/horizontal_spacing"
                android:paddingEnd="@dimen/fragment_padding"
                android:paddingStart="@dimen/fragment_padding"
                android:paddingTop="@dimen/fragment_padding">

                <TextView
                    android:id="@+id/txtSpChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_number_of_special_chars"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <SeekBar
                    android:id="@+id/seekSpChars"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="0dp"
            android:src="@mipmap/img24dp_refresh"
            app:fabSize="normal" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@mipmap/img24dp_ok"
            app:fabSize="normal" />

    </LinearLayout>

</RelativeLayout>